--- a/css/main.css
+++ b/css/main.css
@@ -79,6 +79,9 @@ h1 {
   background: center / cover no-repeat url("../images/sample_key.jpg");
   font-family: 'Noto Serif JP', serif;
   font-weight: bold;
+  display: flex;
+  flex-direction: column;
+justify-content: center
 }
 .key h1{
   font-size: 2.5rem;
@@ -101,17 +104,111 @@ h1 {
 .center {
   text-align: center;
 }
-.caffee_menu_image {
+.coffee_menu_image {
   width: 20%;
   border-radius: 50%;
 }
-.key section_inner {
+ 
+  .concept_inside {
+    display: flex;
+  justify-content: space-between;
+  }
+  .concept_paragraph {
+    width: 60%;
+  }
+  .concept_content {
+    width: 100%;
+  }
+  .concept_img {
+    width: 35%;
+  }
 
+.key  {
 }
-.left {
-  text-align: left;
-  width: 60%
+
+
+.concept_img {
+  text-align: right;
+  width: 35%;
 }
-.right {
-  text-align:right;
+.menu {
+    background: url("../images/sample_menu_bg.jpg") no-repeat bottom;
+    background-attachment: fixed;
+    background-size: 100%;
+}
+
+.menu_list {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.recommended_menu_list {
+    padding-bottom: 50px;
+}
+.pancake_title {
+    font-size: 18px;
+    font-family: 'Noto Serif JP', serif;
+  }
+  .pancake_menu_content {
+    padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background: #fff;
+  }
+  .pancake_menu_image {
+    width: 55%;
+    object-fit: cover;
+    height: 300px;
+  }
+  .pancake_menu {
+    width: 49%;
+    display: flex;
+    flex-direction: row-reverse;
+    box-shadow: 2px 2px 5px rgba(0,0,0,0.4);;
+  }
+  .coffee_menu_content {
+    width: 80%;
+    padding: 10px;
+  }
+  .menu_list {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .coffee_menu {
+    background: #fff;
+    padding: 20px;
+  }
+  .coffee_price {
+
+  }
+  .menu_item_title {
+    font-size: 18px;
+    font-family: 'Noto Serif JP', serif;
+  }
+.caffee_menu_list_item {
+  width: 49%;
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  padding: 10px;
+}
+.info_section {
+  display: flex;
+}
+.info_section_title {
+  width: 80px;
+}
+.frame_area {
+  position: relative;
+  width: 100%;
+  padding-top: 56.25%;
+}
+.frame_child{
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
 }
