--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 @charset "utf-8";
+
 html {
   height: 100%;
 }
@@ -7,15 +8,30 @@ body {
   padding-bottom: 75px;
   min-height: 100%;
 }
-.hey{
 
+dl {
+  display: flex;
+  flex-wrap: wrap;
 }
+dt {
+  width: 33%;
+}
+dd {
+  margin-left: auto;
+  width: 66%;
+}
+
+a:link,a:visited {
+  text-decoration: none;
+  color: white;
+}
+
 li {
   list-style: none;
 }
 p, ul {
   margin: 0;
-  padding: 0;
+  padding: 7 0 7px;
 }
 div,li {
   box-sizing: border-box;
@@ -107,8 +123,10 @@ justify-content: center
 .coffee_menu_image {
   width: 20%;
   border-radius: 50%;
+  text-align: center;
+    margin-left: 100px;
 }
- 
+
   .concept_inside {
     display: flex;
   justify-content: space-between;
@@ -119,12 +137,6 @@ justify-content: center
   .concept_content {
     width: 100%;
   }
-  .concept_img {
-    width: 35%;
-  }
-
-.key  {
-}
 
 
 .concept_img {
@@ -137,11 +149,6 @@ justify-content: center
     background-size: 100%;
 }
 
-.menu_list {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
 .recommended_menu_list {
     padding-bottom: 50px;
 }
@@ -179,10 +186,9 @@ justify-content: center
   .coffee_menu {
     background: #fff;
     padding: 20px;
+    text-align: center;
   }
-  .coffee_price {
-
-  }
+  
   .menu_item_title {
     font-size: 18px;
     font-family: 'Noto Serif JP', serif;
@@ -192,7 +198,7 @@ justify-content: center
   display: flex;
   flex-direction: row-reverse;
   align-items: center;
-  padding: 10px;
+  padding: 20px;
 }
 .info_section {
   display: flex;
@@ -203,7 +209,6 @@ justify-content: center
 .frame_area {
   position: relative;
   width: 100%;
-  padding-top: 56.25%;
 }
 .frame_child{
   position: absolute;
@@ -211,4 +216,25 @@ justify-content: center
   right: 0;
   width: 100%;
   height: 100%;
+}
+
+.footer_nav_item{
+margin:0 5 0 5px;
+display:inline-block
+}
+
+.footer{
+background-color:#251e19;
+font-size: 1rem;
+width: 100%;
+height: 75px;
+color:white;
+position: absolute;
+text-align: center;
+text-decoration: none;
+}
+
+.footer_logo{
+  width: 60px;
+  display:inline-block
 }
